[package]
name = "hazevents"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.10"
lazy_static = "1.4"

tokio-postgres = "0.7.15"

reqwest = { version = "0.12.24", features = ["json", "stream"] }
#serde = { version = "1.0.152", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.93"

chrono = { version = "0.4.42", features = ["serde"] }

wait-timeout = "0.2.1"
itertools = "0.14.0"
thiserror = "2.0.17"

geoutils = "0.5.1"

tokio-util = "0.7.17"
tokio = { version = "1.48.0", features = ["full"] }

futures = "0.3.30"
futures-util = "0.3.31"


push_phone = { version = "0.1.0", path = "../push_phone" }
