[package]
name = "push_phone"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "stream"] }
#serde = { version = "1.0.152", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.93"


# Source - https://stackoverflow.com/a/75834695
# Compilation issues within container

openssl = { version = "0.10", features = ["vendored"] }
