[package]
name = "wobblealert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
config = "0.10"
lazy_static = "1.4"
warp = "=0.3.1"
glob = "0.3.1"

reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
wait-timeout = "0.1.5"
itertools = "0.10.5"
thiserror = "=1.0.24"

geoutils = "0.5.1"
csv = "1.4.0"
tokio-util = "0.7.4"
tokio = { version = "1.24.1", features = ["full"] }

influxdb2 = "0.5"
influxdb2-structmap = "0.2"
influxdb2-derive = "0.1.1"
num-traits = "0.2"

futures = "0.3.30"



push_phone = { version = "0.1.0", path = "../push_phone" }
